(executable
	(name main)
	(modules Main)
	(libraries
		preliminaries
		exercise
		test
		compiler-libs.common
		unix
	)
)

(library
	(name preliminaries)
	(modules
		Preliminaries
	)
	(libraries
		yojson
		ppx_deriving_yojson.runtime
		compiler-libs.common
	)
	(preprocess (pps ppx_deriving_yojson))
)

(library
	(name exercise)
	(modules
		Exercise
	)
	(libraries
		compiler-libs.common	
	)
	(preprocess (pps ppxlib.metaquot))
)

(library
	(name test)
	(modules Test)
	(libraries
		sampler
		exercise
		typediter
		compiler-libs.common
	)
	(preprocess (pps ppxlib.metaquot))
)

(library
	(name sampler)
	(modules Sampler)
	(libraries
		typevars
		compiler-libs.common
	)
	(preprocess (pps ppxlib.metaquot))
)

(library
	(name typevars)
	(modules Typevars)
	(libraries
		compiler-libs.common
	)
	(preprocess (pps ppxlib.metaquot))
)

(library
	(name typediter)
	(modules Typediter)
	(libraries
		compiler-libs.common
	)
	(preprocess (pps ppxlib.metaquot))
)