(executable
	(name main)
	(modules Main)
	(libraries
		preliminaries
		exercise
		test
		compiler-libs.common
		unix
	)
)

(library
	(name preliminaries)
	(modules
		Preliminaries
	)
	(libraries
		utils
		yojson
		ppx_deriving_yojson.runtime
		compiler-libs.common
	)
	(preprocess (pps ppxlib.metaquot ppx_deriving_yojson))
)

(library
	(name exercise)
	(modules
		Exercise
	)
	(libraries
		compiler-libs.common	
	)
	(preprocess (pps ppxlib.metaquot))
)

(library
	(name test)
	(modules Test)
	(libraries
		sampler
		exercise
		typediter
		compiler-libs.common
	)
	(preprocess (pps ppxlib.metaquot))
)

(library
	(name sampler)
	(modules Sampler)
	(libraries
		compiler-libs.common
	)
	(preprocess (pps ppxlib.metaquot))
)

(library
	(name typediter)
	(modules Typediter)
	(libraries
		compiler-libs.common
	)
	(preprocess (pps ppxlib.metaquot))
)

(library
	(name utils)
	(modules Utils)
	(libraries
		compiler-libs.common
	)
	(preprocess (pps ppxlib.metaquot))
)
