(executable
	(name main)
	(modules Main)
	(libraries
		compiler-libs.common
		sampler
	)
	(preprocess (pps ppxlib.metaquot))
)

(library
	(name sampler)
	(modules Sampler)
	(libraries
		utils
		compiler-libs.common
	)
	(preprocess (pps ppxlib.metaquot))
)

(library
	(name utils)
	(modules Utils)
	(libraries
		compiler-libs.common
	)
	(preprocess (pps ppxlib.metaquot))
)
